--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dj-database-url==0.4.0
 Django==1.9.2
 gunicorn==19.4.5
-psycopg2==2.6.1
+psycopg2==2.7
 whitenoise==2.0.6
 boto==2.39.0
 django-bootstrap3==6.2.2
@@ -10,3 +10,4 @@ django-heroku-postgresify==0.4
 django-storages==1.4
 Pillow==3.1.1
 django-s3-folder-storage==0.3
+selenium==3.4.1
